<resources>
    <string name="app_name">Aula28</string>
    <string name="adiciona">Adiciona</string>
    <string name="subtrai">Subtrai</string>
    <string name="x_2">*</string>
    <string name="__2">/</string>
    <string name="numero">Numero</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
</resources>